Fix cards on mobile

--- a/style.css
+++ b/style.css
@@ -105,10 +105,13 @@ b{
 
 /* MOBILE RULES */
 @media only screen and (max-width: 768px) {
+
   .max720{
+    margin: 2px;
     width: auto;
-    margin: 0;
+    margin-top: -40px;
     padding: 20px;
+    border-radius: 0;
   }
 
   .card{
